adds index.html, style.css, images/

--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>My Personal Website</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
+    <title>My Portfolio</title>
+</head>
+<body>
+    <header>
+        <div> AWUOR ROCHELLE</div>
+        <nav>
+            <ul>
+                <li><a href=" ">Home</a></li>
+                <li><a href=" ">About </a></li>
+                <li><a href=" ">Services</a></li>
+                <li><a href=" ">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="hero">
+        <div>
+        <h1 class="hed">Hi! i'm <em>Rochelle Awuor.</em>
+            <p >I am a software engineer based in Nairobi,Kenya</p>
+        </h1>
+        
+        <button class ="btn"><b>Get to know me</b></button>
+    </div>
+        <div class="me">
+            <img src="images/IMG_0218.jpg" height="200px" width="" alt="my image">
+        </div>
+       
+    </section>
+</body>
 </html>
