--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button class ="btn"><b>Get to know me</b></button>
     </div>
         <div class="me">
-            <img src="images/IMG_0218.jpg" height="200px" width="" alt="my image">
+            <img src="images/myfaceee.jpg" height="200px" width="" alt="my image">
         </div>
        
     </section>
