modifies index.html,css/

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div> AWUOR ROCHELLE</div>
         <nav>
             <ul>
-                <li><a href="#hero ">Home</a></li>
-                <li><a href="#check ">About </a></li>
-                <li><a href=" #services">Services</a></li>
-                <li><a href=" #contacts">Contact</a></li>
+                <li><a href="#hero " class="links">Home</a></li>
+                <li><a href="#check " class="links">About </a></li>
+                <li><a href=" #services" class="links">Services</a></li>
+                <li><a href=" #contacts" class="links">Contact</a></li>
             </ul>
         </nav>
     </header>
