creates the file for my cv

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p >A software engineer based in Nairobi,Kenya.</p>
         </h1>
         
-        <button class ="btn"><b>Get to know me</b></button>
+        <button class ="btn"><b>Download cv</b></button>
     </div>
         <div class="me">
             <img src="images/myfaceee.jpg" height="200px" width="" alt="my image">
