creates the file for my cv

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p >A software engineer based in Nairobi,Kenya.</p>
         </h1>
         
-        <button class ="btn"><b>Download cv</b></button>
+        <a href="AWUOR_ROCHELLE_CV.pdf">Download my cv</a>
     </div>
         <div class="me">
             <img src="images/myfaceee.jpg" height="200px" width="" alt="my image">
