--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
             <ul>
                 <li><a href="#hero " class="links">Home</a></li>
                 <li><a href="#check " class="links">About </a></li>
-                <li><a href=" #services" class="links">Services</a></li>
+                <li><a href=" #services" class="links">Projects</a></li>
                 <li><a href=" #contacts" class="links">Contact</a></li>
             </ul>
         </nav>
     </header>
     <section class="hero" id="hero">
         <div>
-        <h1 class="hed">Hi! i'm <em>Rochelle Awuor.</em>
-            <p >A software engineer based in Nairobi,Kenya.</p>
-        </h1>
-        
+        <h1 class="hed">Hello,i'm <b>Rochelle Awuor</b></h1>
+        <h1>I'm a Software Engineer</h1>
+        <p>I specialize in building responsive , user-friendly web applications using HTML,CSS,Javascript and React.</p>
+        <p>I'm passionate about solving real-world problems through clean,efficient code</p>
         <a href="AWUOR_ROCHELLE_CV.pdf">Download my cv</a>
     </div>
         <div class="me">
-            <img src="images/myfaceee.jpg" height="200px" width="" alt="my image">
+            <img src="images/IMG_0218.jpg" height="200px" width="" alt="my image">
         </div>
        
     </section>
@@ -108,7 +108,7 @@
     <footer class="footer">
         <div>
             <a href =" https://www.instagram.com/_r.awuor"><img src="images/new-instagram-logo-white-border-icon-png-large.png" alt="instagram page" width="20px" height="20px"></a>
-            <a href =" https://www.linkedin.com/r.awuor"><img src="images/linked.png" alt="instagram page" width="20px" height="20px"></a>
+            <a href =" https://www.linkedin.com/in/rochelle-awuor-7274692b3"><img src="images/linked.png" alt="instagram page" width="20px" height="20px"></a>
             <a href =" https://www.twitter.com/iamrochellee"><img src="images/twitter.png" alt="instagram page" width="20px" height="20px"></a>
         </div>
        <p>&copy;2025 Rochelle Awuor.</p>
