creates a rounded button for the download cv

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
         <h1>I'm a Software Engineer</h1>
         <p>I specialize in building responsive , user-friendly web applications using HTML,CSS,Javascript and React.</p>
         <p>I'm passionate about solving real-world problems through clean,efficient code</p>
-        <a href="AWUOR_ROCHELLE_CV.pdf">Download my cv</a>
+        <div>
+           <a href =" https://www.instagram.com/_r.awuor"><img src="images/new-instagram-logo-white-border-icon-png-large.png" alt="instagram page" width="20px" height="20px"></a>
+            <a href =" https://www.linkedin.com/in/rochelle-awuor-7274692b3"><img src="images/linked.png" alt="instagram page" width="20px" height="20px"></a>
+            <a href =" https://www.twitter.com/iamrochellee"><img src="images/twitter.png" alt="instagram page" width="20px" height="20px"></a>  
+        </div>
+        <div >   
+        <a href="AWUOR_ROCHELLE_CV.pdf" class="download">Download my cv</a>
+        </div>
     </div>
         <div class="me">
             <img src="images/IMG_0218.jpg" height="200px" width="" alt="my image">
