--- a/index.html
+++ b/index.html
@@ -21,18 +21,16 @@
     </header>
     <section class="hero" id="hero">
         <div>
-        <h1 class="hed">Hello,i'm <b>Rochelle Awuor</b></h1>
-        <h1>I'm a Software Engineer</h1>
-        <p>I specialize in building responsive , user-friendly web applications using HTML,CSS,Javascript and React.</p>
-        <p>I'm passionate about solving real-world problems through clean,efficient code</p>
-        <div>
-           <a href =" https://www.instagram.com/_r.awuor"><img src="images/new-instagram-logo-white-border-icon-png-large.png" alt="instagram page" width="20px" height="20px"></a>
-            <a href =" https://www.linkedin.com/in/rochelle-awuor-7274692b3"><img src="images/linked.png" alt="instagram page" width="20px" height="20px"></a>
-            <a href =" https://www.twitter.com/iamrochellee"><img src="images/twitter.png" alt="instagram page" width="20px" height="20px"></a>  
-        </div>
+        <h1 class="hed">Hello,i'm <b><em>Rochelle Awuor</em></b></h1>
+        <h1 class="hed2"> I'm a <em>Software Engineer</em></h1>
+        <p class="par1">I specialize in building responsive , user-friendly web applications using HTML,CSS,Javascript and React.</p>
+        <p class="par2">I'm passionate about solving real-world problems through clean,efficient code</p>
+      
         <div >   
         <a href="AWUOR_ROCHELLE_CV.pdf" class="download">Download my cv</a>
         </div>
+        
+
     </div>
         <div class="me">
             <img src="images/IMG_0218.jpg" height="200px" width="" alt="my image">
