adds link to the github logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#hero " class="links">Home</a></li>
                 <li><a href="#check " class="links">About </a></li>
                 <li><a href=" #services" class="links">Projects</a></li>
-                <li><a href=" #contacts" class="links">Contact</a></li>
+                <li><a href=" #contact" class="links">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -101,7 +101,7 @@
     </section>
     <footer class="footer">
         <div>
-            <a href =" https://www.instagram.com/_r.awuor"><img src="images/new-instagram-logo-white-border-icon-png-large.png" alt="instagram page" width="20px" height="20px"></a>
+            <a href =" https://github.com/awuorochelle75"><img src="images/github (2).png" alt="instagram page" width="25px" height="25px"></a>
             <a href =" https://www.linkedin.com/in/rochelle-awuor-7274692b3"><img src="images/linked.png" alt="instagram page" width="20px" height="20px"></a>
             <a href =" https://www.twitter.com/iamrochellee"><img src="images/twitter.png" alt="instagram page" width="20px" height="20px"></a>
         </div>
