changes my picture

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </div>
         <div class="me">
-            <img src="images/IMG_0218.jpg" height="200px" width="" alt="my image">
+            <img src="images/myfaceee.jpg" height="200px" width="" alt="my image">
         </div>
        
     </section>
